CJAL-08/01/2018-Termina Desarrollo modulo Cobranza

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -13,19 +13,10 @@
 
 <html>
 <head>
+    <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
     <script src="~/assets/js/pages/ui/notifications.js"></script>
     <script type="text/javascript">
-              
-    function onBeginCallback(s, e) {
-        e.customArgs["editMode"] = editMode.GetValue();
-    }
-        $(document).ready(function () {
-            $('#btnSave').click(function () {
-                debugger;
-                GridView.UpdateEdit();
-            });
-        });
         var mensaje = '@ViewBag.Msj';
         var tipo = '@ViewBag.Tipo';
         if (mensaje != '') {
@@ -85,7 +76,6 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-2">
                                             <b>No Cliente:</b>
-                                            @*@Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control" })*@
                                             <input type="text" name="IdCliente" class="form-control" placeholder="No del cliente" />
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
@@ -118,7 +108,6 @@
                                         </div>
                                         <div class="col-sm-3">
                                             <b>RFC:</b>
-                                            @*@Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", @placeholder = "RFC del cliente"})*@
                                             <input type="text" name="Rfc" class="form-control" placeholder="RFC del cliente"/>
                                         </div>
                                         <div class="col-sm-3" style="top:10px">
@@ -147,8 +136,7 @@
                             }
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    @Html.Partial("_AbonosPartial", Model )
-                                    @*@Html.Action("AbonosPartial")*@
+                                    @Html.Partial("_AbonosPartial", Model)
                                 </div>
                             </div>
                         </div>
@@ -156,6 +144,6 @@
                 </div>
             </div>
         </section>
-    }
+    }    
 </body>
 </html>
