--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/_AbonosPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/_AbonosPartial.cshtml
@@ -54,7 +54,7 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "TotalAbonos";
+            c.FieldName = "SaldoInsoluto";
             c.Caption = "Saldo insoluto";
             c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
