--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaCliente.cshtml
@@ -7,6 +7,64 @@
 <head>
     <script src="~/Resources/js/Clientes.js"></script>
     <link href="~/Resources/css/Clientes.css" rel="stylesheet" />
+    <style type="text/css">
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+            .switch input {
+                display: none;
+            }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+        }
+
+            .slider:before {
+                position: absolute;
+                content: "";
+                height: 26px;
+                width: 26px;
+                left: 4px;
+                bottom: 4px;
+                background-color: white;
+                transition: .4s;
+            }
+
+        input[type="checkbox"]:checked + input[type="hidden"] + .slider,
+        input[type="checkbox"]:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input[type="checkbox"]:focus + input[type="hidden"] + .slider,
+        input[type="checkbox"]:focus + .slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input[type="checkbox"]:checked + input[type="hidden"] + .slider:before,
+        input[type="checkbox"]:checked + .slider:before {
+            transform: translateX(26px);
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+            border-radius: 34px;
+        }
+
+            .slider.round:before {
+                border-radius: 50%;
+            }
+    </style>
 </head>
 <body style="height:100%">
     @using (Html.BeginForm("GuardarCliente", "Clientes", FormMethod.Post))
@@ -234,12 +292,10 @@
                                     </div>
                                     <div class="col-lg-1 col-md-1 col-sm-1">
                                         <div class="form-group">
-                                            <div>                                               
-                                                <label class="switch">
-                                                    <input type="checkbox" name="VentaExtraordinaria">
-                                                    <span class="slider round"></span>
-                                                </label>
-                                            </div>
+                                            <label class="switch">
+                                                @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
+                                                <span class="slider round"></span>
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
