--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/Clientes.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/Clientes.css
@@ -33,7 +33,7 @@
         transition: .4s;
     }
 
-input:checked + .slider {
+/*input:checked + .slider {
     background-color: #2196F3;
 }
 
@@ -45,7 +45,8 @@ input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-}
+}*/
+    
 
 /* Rounded sliders */
 .slider.round {
