--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Index.cshtml
@@ -68,12 +68,12 @@
                                 </div>
                             </div>
                         </div>
-                        <br />
+                        @*<br />
                         <div class="row clearfix">
                             <div class="col-md-12">
                                 <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-round btn-primary btn-round float-right" />
                             </div>
-                        </div>
+                        </div>*@
                         <br />
                         <div class="row clearfix">
                             <div class="col-sm-3">
@@ -104,14 +104,17 @@
                                             <input type="text" name="Rfc" id="txtRfc" class="form-control" />
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-5">
                                         <div class="form-group">
                                             <b>Razón Social o Nombre Completo</b>
                                             <input type="text" name="RazonSocial" id="txtRS" class="form-control" />
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-2">
                                         <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <input id="BtnNuevo" type="submit" value="Nuevo" class="btn btn-raised btn-round btn-primary btn-round " />
                                     </div>
                                 </div>
                             </div>
