CJAL-10/09/2018- se actualizan detalles de css en  devExpress

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
@@ -1,8 +1,8 @@
 ﻿@model  MVC.Presentacion.Models.Cobranza.ReporteModel
 @Html.DevExpress().GetStyleSheets(
-            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Moderno" },
-            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Moderno" },
-            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Moderno" }
+            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
         )
 @Html.DevExpress().GetScripts(
             new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
@@ -77,23 +77,24 @@
                                                     settings.SelectedIndex = 0;
                                                     settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                     settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                    settings.Theme = "Material";
                                                     settings.Properties.TextField = "Cliente";
                                                     settings.Properties.ValueField = "IdCliente";
                                                 }).BindList(ViewBag.Clientes).GetHtml()
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
-                                                       {
-                                                           settings.Name = "FechaRango1";
-                                                           settings.Properties.UseMaskBehavior = true;
-                                                           settings.Properties.EditFormat = EditFormat.Custom;
-                                                           settings.Theme = "Moderno";
-                                                           settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
-                                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                                           settings.Attributes.Clear();
-                                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-                                                       }).GetHtml()
+                                       {
+                                           settings.Name = "FechaRango1";
+                                           settings.Properties.UseMaskBehavior = true;
+                                           settings.Properties.EditFormat = EditFormat.Custom;
+                                           //settings.Theme = "Moderno";
+                                           settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
+                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                           settings.Attributes.Clear();
+                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                       }).GetHtml()
                                         </div>
                                         <div class="col-sm-3" style="top:10px">
                                             <div class="form-group">
