--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/_AbonosPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/_AbonosPartial.cshtml
@@ -16,6 +16,7 @@
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowDeleteButton = false;
         settings.CommandColumn.ShowEditButton = true;
+        settings.Theme = "Moderno";
         settings.SettingsCommandButton.UpdateButton.Text = "Abonar";
         settings.Columns.Add(c =>
         {
