--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0"
                         android:hint="@string/login_hint_password"
+                        android:text="prueba."
                         android:inputType="textPassword"
                         android:paddingBottom="5dp"
                         android:textSize="18sp"
